syntax = "proto3";

option java_package = "messages";
option java_outer_classname = "Follower";

message FollowerRequest{
  string hostName = 1;
  int32 port = 2;
  int32 id = 3;
}