syntax = "proto3";

option java_package = "messages";
option java_outer_classname = "Message";

message MessageDetails{
  string topic = 1;
  bytes data = 2;
}