syntax = "proto3";

import "protos/message.proto";

option java_package = "messages";
option java_outer_classname = "Replicate";

message ReplicateMessage{
    MessageDetails details = 1;
}